# pallas

./: CLAUDE.md
ciudad-py/: README.md  main.py  requirements.txt  test_vis.py
luz-py/: README.md  main.py  requirements.txt
pallas-cpp/: .clang-format  CMakeLists.txt  README.md  flake.nix
pallas-cpp/bindings/: geometry.cc
pallas-cpp/frontend/: index.html
pallas-cpp/onnxruntime-1.20.2/: default.nix  eigen.patch  nvcc-gsl.patch
pallas-cpp/process/: mat_spsc_tests.cc  psystreamd.cc  shm_spsc_tests.cc  starburstd.cc  starforged.cc  streamd.cc
pallas-cpp/proto/: pallas.proto
pallas-cpp/src/core/: logger.cc  logger.h  sam.cc  sam.h  service.cc  service.h  timer.cc  timer.h  yolo.cc  yolo.h  yolo_utils.cc
pallas-cpp/src/service/: camera_service.cc  camera_service.h  inference_service.cc  inference_service.h  mat_queue.h  mat_queue_utils.h  ps3.cc  ps3.h  ps3_camera_service.cc  ps3_camera_service.h  spmc_mat_queue.h  stream_service.cc  stream_service.h  twilio.h  viewer_service.cc  viewer_service.h
pallas-cpp/src/vision/: detection.cc  detection.h  geometry.cc  geometry.h  sam.cc  sam.h  yolo.cc  yolo.h  yolo_utils.cc
pallas-cpp/test/: main_test.cc
pallas-cpp/test/core/: mat_queue_tests.cc  sam_tests.cc  spmc_mat_queue_tests.cc
pallas-cpp/test/vision/: geometry_tests.cc  sam_tests.cc  yolo_tests.cc
